Use more efficient Boolean.valueOf()
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/net/branches/NET_2_0@669467 13f79535-47bb-0310-9956-ffa450edef68